adding more projects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <nav>
       <div class="logo">My personal Portfolio</div>
       <ul class="nav-links">
-        <a href="#">menu</a>
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact Me</a></li>
@@ -25,11 +24,7 @@
     <section class="hero">
       <div class="hero-content">
         <h1>Linet Ojwang</h1>
-        <p><strong>A creative Developer</strong>, with knowledge in web development and creating interactive designs. I create projects that reflect quality and creativity.</p>
-        <a href="#contact" class="btn">Tel: +254711297362</a>
-        <p>Email:awinoojwang22@gmail.com</p>
-        <p>socials:www.linkedin.com/in/linet-ojwang</p>
-        <p>twitter:https://x.com/awino36922820</p>
+        <p><strong>A creative Developer</strong>, with knowledge in web development and creating interactive designs. I create projects that reflect quality and creativity.I do specialize in building dynamic web applications, optimizing performance, and turning ideas into functional, scalable software.</p>
       </div>
       <div class="profile-image">
         <img src="images/profile.jpg.png" alt="profile image">
@@ -49,7 +44,14 @@
     </ul>
   </section>
 
-  <section id="education">
+  <section id="Contact Me">
+    <h2>contact Me</h2>
+    <p><strong>Email:</strong> awinoojwang22@gmail.com</p>
+    <p><strong>Tel:</strong> +254711297362</p>
+    <p>twitter:https://x.com/awino36922820</p>
+  </section>
+
+  <section id="Education">
     <h2>Education</h2>
     <p><strong> Software Engineering</p>
     <p><strong>Africa Leadership Experience:</strong> ALX University</p>
@@ -71,6 +73,14 @@
         <h3>Project 2: weather_indicator</h3>
         <p>Weather Indicator is a Node.js application that fetches weather forecast data and displays it on a web page</p>
         <a href="https://github.com/Linetgithub/weather_indicator.git" target="_blank">Live Demo</a>
+      </div>
+    </div>
+
+    <div class="project-card">
+        <img src="images/project3.jpg" alt="Project 3 Screenshot">
+        <h3>Project 3: Bobba Funshop</h3>
+        <p>This is a project showcasing an e commerce website displaying beverages and snacks that can be ordered online</p>
+        <a href="https://github.com/Linetgithub/FUTURE_FS_02.git" target="_blank">View on Github</a>
       </div>
     </div>
 
