new changes on projects grid

--- a/index.html
+++ b/index.html
@@ -67,22 +67,25 @@
         <p>a web application that allows users to search for movies by title built with HTML, CSS, and JavaScript.</p>
         <a href="https://github.com/Linetgithub/film-finder.git" target="_blank">View on GitHub</a>
       </div>
-      
       <div class="project-card">
         <img src="images/project-2-image.jpg" alt="Project 2 Screenshot">
         <h3>Project 2: weather_indicator</h3>
         <p>Weather Indicator is a Node.js application that fetches weather forecast data and displays it on a web page</p>
         <a href="https://github.com/Linetgithub/weather_indicator.git" target="_blank">Live Demo</a>
       </div>
-    </div>
-
-    <div class="project-card">
+      <div class="project-card">
         <img src="images/project3.jpg" alt="Project 3 Screenshot">
         <h3>Project 3: Bobba Funshop</h3>
         <p>This is a project showcasing an e commerce website displaying beverages and snacks that can be ordered online</p>
         <a href="https://github.com/Linetgithub/FUTURE_FS_02.git" target="_blank">View on Github</a>
       </div>
+      <div class="project-card">
+      <img src="images/todo.jpg" alt="Project 3 Screenshot">
+      <h3>Project 4: TO-DO List</h3>
+      <p>To-Do List is a web application that helps with task management</p>
+      <a href="https://github.com/Linetgithub/FUTURE_FS_03.git" target="_blank">Live Demo</a>
     </div>
+  </div>
 
   <footer>
     <p>&copy; 2024 Linet Ojwang. All rights reserved.</p>
